Fixed background clipping and centered title.

--- a/www/royall_beautyfication.css
+++ b/www/royall_beautyfication.css
@@ -9,7 +9,7 @@ html:before{
   position: fixed;
   left: 0;
   top: 32.432%;
-  z-index: 0;
+  z-index: -2;
   width: 100%;
   height: 10.811%;
   background-color: #FFF;
@@ -20,7 +20,7 @@ body:before{
   position: fixed;
   left: 32.432%;
   top: 0;
-  z-index: 0;
+  z-index: -2;
   width: 10.811%;
   height: 100%;
   background-color: #FFF;
@@ -29,6 +29,17 @@ body:before{
 /* Text */
 .bold{
   font-weight: bold;
+}
+
+/* Titles */
+#main_title{
+  color: #FFF;
+  text-shadow:
+    -1px -1px 0 rgba(0,0,0,0.4),
+    1px -1px 0 rgba(0,0,0,0.4),
+    -1px 1px 0 rgba(0,0,0,0.4),
+    1px 1px 0 rgba(0,0,0,0.4);
+  text-align: center;
 }
 
 /* Main wrapper */
@@ -55,16 +66,6 @@ body:before{
   float: left;
   width: 100%;
   height: 100%;
-}
-
-/* Titles */
-#main_title{
-  color: #000;
-  text-shadow:
-    -1px -1px 0 rgba(255,255,255,0.4),
-    1px -1px 0 rgba(255,255,255,0.4),
-    -1px 1px 0 rgba(255,255,255,0.4),
-    1px 1px 0 rgba(255,255,255,0.4);
 }
 
 /* Introduction */
